Feat: 타임리프 이미지 업로드 적용

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,7 @@
     <!--  헤더 시작  -->
     <header class="flex w-full justify-between">
         <section class="flex">
-<!--            <img src="/images/logoXL.png" alt="DevChall" class="w-[200px] h-[200px] flex-shrink-0 mx-10 p-2">-->
-            <img src="https://kr.object.ncloudstorage.com/devchall/test/7d58d53f-4160-42b8-9f24-0571b1218c5f.png" alt="challenge"></img>
+            <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/logoXL.png" alt="DevChall" class="w-[200px] h-[200px] flex-shrink-0 mx-10 p-2">
         </section>
         <!--   카테고리 타임리프 작업 필요    -->
         <section class="flex w-[90%]">
@@ -75,7 +74,7 @@
                         class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                     <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
                         <figure class="pt-5">
-                            <img src="/images/example1.png" alt="Shoes" class="rounded-xl w-[90%]" />
+                            <img th:src="${challengeMember.getLinkedChallenge().challengeImg}" alt="Shoes" class="rounded-xl w-[90%]" />
                         </figure>
                     </a>
                     <div class="card-body items-center text-center" style="padding: 10px">
@@ -124,7 +123,7 @@
                             <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                                 <a th:href="|/usr/challenge/detail/${challenge.id}|">
                                     <figure class="pt-5">
-                                        <img src="/images/example1.png" alt="Shoes" class="rounded-xl w-[90%]" />
+                                        <img th:src="${challenge.challengeImg}" alt="Challenge_img" class="rounded-xl w-[90%]" />
                                     </figure>
                                 </a>
 
