--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -15,7 +15,7 @@
                         <div class="w-30 h-30">
                             <div class="avatar indicator" style="width: 120px; height: 120px">
 <!--                                <a href=""><span class="indicator-item indicator-bottom badge badge-secondary">변경</span></a>-->
-                                <img class="rounded-full" src="/images/naver-icon.png" />
+                                <img class="rounded-full" src="https://kr.object.ncloudstorage.com/devchall/devchall_img/person.png" />
                             </div>
                         </div>
                         <h3 class="text-3xl" th:text="${@rq.member.loginID}"></h3>
@@ -46,7 +46,7 @@
                                  class="card w-auto h-[150px] bg-base-100 shadow-xl text-gray-400 my-2 ">
                                 <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
                                     <figure class="pt-5">
-                                        <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
+                                        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
                                     </figure>
                                 </a>
                                 <div class="card-body items-center text-center" style="padding: 10px">
