--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -89,7 +89,7 @@
         }
     </script>-->
     <div>
-        <img src="/images/logo.png" class="w-[250px] h-[250px]">
+        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/logo.png" class="w-[250px] h-[250px]">
     </div>
     <div class="flex flex-1">
         <form th:action method="POST" class="flex flex-col justify-center items-center w-full" onsubmit="JoinForm__submit(this); return false;">
@@ -166,8 +166,8 @@
                     </label>
                 </div>
                 <div class="mt-[20px] flex justify-center space-x-6">
-                    <img src="/images/naver-icon.png" class="w-[50px] h-[50px]">
-                    <img src="/images/kakao-icon.png" class="w-[50px] h-[50px]">
+                    <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/naver-icon.png" class="w-[50px] h-[50px]">
+                    <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/kakao-icon.png" class="w-[50px] h-[50px]">
                 </div>
             </div>
         </form>
