--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -45,7 +45,7 @@
 <!--        }-->
 <!--    </script>-->
     <div>
-        <img src="/images/logo.png" class="w-[250px] h-[250px]">
+        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/logo.png" class="w-[250px] h-[250px]">
     </div>
     <div class="flex flex-1 h-full">
         <form th:action method="POST" class="flex flex-col justify-1/2 items-center w-full" onsubmit="LoginForm__submit(this); return false;">
@@ -69,6 +69,15 @@
                     <button id="btn-join-1" class="btn btn-md btn-accent gap-3">
                         <span class="text-white" style="font-size: 17px;">로그인</span>
                     </button>
+                    <div class="flex justify-center mt-[20px]">
+                        <label class="label">
+                            <span class="text-gray-400">SNS로 로그인 하기</span>
+                        </label>
+                    </div>
+                    <div class="mt-[20px] flex justify-center space-x-6">
+                        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/naver-icon.png" class="w-[50px] h-[50px]">
+                        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/kakao-icon.png" class="w-[50px] h-[50px]">
+                    </div>
                 </div>
             </div>
         </form>
