Feat: Add category in main page

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -104,10 +104,13 @@
 
                                     <select name="subject" class="select select-accent w-70 max-w-xs">
                                         <option disabled selected>공부 주제</option>
-                                        <option>개념 공부</option>
-                                        <option>시험 대비</option>
-                                        <option>예제 풀기</option>
-                                        <option>프로젝트</option>
+                                        <option value="project">프로젝트</option>
+                                        <option value="coding">코딩테스트</option>
+                                        <option value="algorithm">알고리즘</option>
+                                        <option value="study">개념 공부</option>
+                                        <option value="test">시험 대비</option>
+                                        <option value="solving">예제 풀기</option>
+
                                     </select>
 
                                     <select name="posttype" class="select select-accent w-70 max-w-xs">
