--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>챌린지 디테일 페이지</title>
+
+    <style>
+        .custom-container {
+            max-width: 35%;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,11 +28,11 @@
 
     </script>
 
-    <div class="flex">
-            <img src="/images/example1.png" alt="post_image" class="w-full h-[200px]"/>
+    <div class="flex mt-5 justify-center">
+        <div class="custom-container">
+            <img src="/images/example1.png" alt="post_image" class="card justify-center items-center"/>
+        </div>
     </div>
-
-    <div class="divider"></div>
 
     <div class="flex flex-col w-full">
 
