Feat: Challenge Re-sizing 작업완료 챌린지 이미지 리사이징 작업 완료

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -25,7 +25,7 @@
 
     <div class="flex justify-center items-center mt-5">
         <div>
-            <img th:src="${challenge.challengeImg}" alt="challenge_image"/>
+            <img th:src="${challenge.largePhoto}" alt="challenge_image"/>
         </div>
     </div>
 
