--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -46,7 +46,7 @@
                                  class="card w-auto h-[150px] bg-base-100 shadow-xl text-gray-400 my-2 ">
                                 <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
                                     <figure class="pt-5">
-                                        <img th:src="${challengeMember.getLinkedChallenge().challengeImg}" alt="Shoes" class="rounded-xl w-[90%]" />
+                                        <img th:src="${challengeMember.getLinkedChallenge().smallPhoto}" alt="Shoes" class="rounded-xl w-[90%]" />
                                     </figure>
                                 </a>
                                 <div class="card-body items-center text-center" style="padding: 10px">
