--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -97,7 +97,7 @@
                             <div th:each="post : ${challengePostList}">
                                 <div class="card w-[200px] shadow-xl">
                                     <figure>
-                                        <img th:src="${post.postImg}" alt="post_image"/>
+                                        <img th:src="${post.smallPhoto}" alt="post_image"/>
                                     </figure>
                                     <div class="card-body">
                                         <h2 class="card-title" th:text="${post.postTitle}"></h2>
