--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -92,19 +92,14 @@
             <a th:if="${@rq.logout}" href="usr/member/join" class="btn btn-sm btn-outline btn-accent mx-2">회원가입</a>
             <a th:if="${@rq.logout}" href="usr/member/login" class="btn btn-sm bg-accent mx-2">로그인</a>
 
-            <a th:if="${@rq.login}" href="usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>
-<!--            <a th:if="${@rq.login}" href="usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.inventoryList[0].item.pattern}"></a>-->
-                <div th:if="${@rq.login and @rq.member.inventoryList != null and #lists.size(@rq.member.inventoryList) > 0}">
-                    <a th:each="inventory : ${@rq.member.inventoryList}"
-                       th:style="'color: ' + ${inventory.item.subPattern} +
-                                 '; background: '+${inventory.item.pattern}+'!important'"
-                       th:if="${@rq.login}"
-                       href="usr/member/me"
-                       class="badge font-bold badge-accent"
-                       th:text="${@rq.member.nickname}">
-                    </a>
-                </div>
-
+<!--            <a th:if="${@rq.login}" href="usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>-->
+            <a href="usr/member/me"
+               th:style="'color: #' + ${@rq.member.equippedFont.item.subPattern} +
+                       '; background: #'+${@rq.member.equippedFont.item.pattern}+' !important'"
+               th:if="${@rq.login}"
+               class="btn btn-xs rounded-lg font-bold mx-1"
+               th:text="${@rq.member.nickname}">
+            </a>
             <form th:action="|/usr/member/logout|" method="post" class="m-0">
                 <button th:if="${@rq.login}" type="submit" class="btn btn-sm btn-ghost"> 로그아웃</button>
             </form>
