--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -86,10 +86,10 @@
         </div>
         <div class="navbar-end" >
 
-            <a th:if="${@rq.login}" href="usr/challenge/create" class="btn btn-sm btn-primary mx-2">챌린지 생성</a>
-            <a th:if="${@rq.logout}" href="usr/member/join" class="btn btn-sm btn-outline btn-accent mx-2">회원가입</a>
-            <a th:if="${@rq.logout}" href="usr/member/login" class="btn btn-sm bg-accent mx-2">로그인</a>
-            <a th:if="${@rq.login}" href="usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>
+            <a th:if="${@rq.login}" href="/usr/challenge/create" class="btn btn-sm btn-primary mx-2">챌린지 생성</a>
+            <a th:if="${@rq.logout}" href="/usr/member/join" class="btn btn-sm btn-outline btn-accent mx-2">회원가입</a>
+            <a th:if="${@rq.logout}" href="/usr/member/login" class="btn btn-sm bg-accent mx-2">로그인</a>
+            <a th:if="${@rq.login}" href="/usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>
             <form th:action="|/usr/member/logout|" method="post" class="m-0">
                 <button th:if="${@rq.login}" type="submit" class="btn btn-sm btn-ghost"> 로그아웃</button>
             </form>
