Feat : Post Title & Contents Text Limit
인증글 작성 시 제목 25자, 내용 500자 제한
포스트 인증글, 목록 평가 점수 표시

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -100,6 +100,11 @@
                                         <img th:src="${post.smallPhoto}" alt="post_image"/>
                                     </figure>
                                     <div class="card-body">
+                                        <p>
+                                            <i class="fa-sharp fa-solid fa-star fa-beat fa-sm" style="color: #40dd84;"></i>
+                                            <small th:text="${post.postScore}"></small>
+                                        </p>
+
                                         <h2 class="card-title" th:text="${post.postTitle}"></h2>
                                         <p th:text="${post.postContents}"></p>
                                         <div class="card-actions justify-end">
