--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -18,7 +18,20 @@
                                 <img class="rounded-full" src="https://kr.object.ncloudstorage.com/devchall/devchall_img/person.png" />
                             </div>
                         </div>
-                        <h3 class="text-3xl" th:text="${@rq.member.loginID}"></h3>
+<!--                        <h3 class="text-3xl" th:text="${@rq.member.loginID}"></h3>-->
+
+                        <h3 class="text-3xl" th:text="${@rq.member.loginID}">
+                            <a href="usr/member/me"
+                            th:style="'color: #' + ${rq.member.equippedFont.item.subPattern} + ' !important;'"
+                            th:if="${rq.login}"
+                            th:text="${rq.member.loginID}"></a>
+                        </h3>
+
+
+
+
+
+
                         <div class="flex justify-around">
                             <h3 class="text-2xl" th:text="${@rq.member.nickname}"></h3>
                             <a class="btn btn-sm mx-2" >변경</a>
