Design: 메인 페이지 챌린지 관련 디자인 표기 변경 챌린지 제목 생략, 라벨 수정, 진행도 바 추가, 댓글, 클립 텍스트 삭제

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,27 +77,26 @@
                             <img th:src="${challengeMember.getLinkedChallenge().smallPhoto}" alt="Shoes" class="rounded-xl w-[90%]" />
                         </figure>
                     </a>
-                    <div class="card-body items-center text-center" style="padding: 10px">
+
+                    <div class="card-body items-center text-center" style="padding: 20px">
                         <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
                             <h4 class="text-black font-bold text-sm"
-                                th:text="${challengeMember.linkedChallenge.challengeName}">
-                                프로그래머스 코테 준비
+                                th:text="${#strings.length(challengeMember.linkedChallenge.challengeName) &gt; 10
+                                ? #strings.substring(challengeMember.linkedChallenge.challengeName, 0, 10) + '...' : challengeMember.linkedChallenge.challengeName}">
                             </h4>
                         </a>
-                        <div class="flex flex-wrap">
-                            <span class="badge badge-primary mx-1" style="font-size: x-small">매일</span>
-                            <span class="badge badge-secondary mx-1" style="font-size: x-small">코딩테스트</span>
+                        <div class="flex flex-wrap justify-center items-center">
+                            <span class="badge badge-primary mx-2" style="font-size: x-small" th:text="'주 ' + ${challengeMember.linkedChallenge.challengeFrequency} + '회'"></span>
+                            <span class="badge badge-secondary mx-2" style="font-size: x-small" th:text="${challengeMember.linkedChallenge.challengeLanguage}"></span>
+                            <span class="badge badge-warning mx-2 my-1" style="font-size: x-small" th:text="${challengeMember.linkedChallenge.challengeSubject}"></span>
                         </div>
-                        <progress class="progress progress-accent w-56" value="40" max="100"></progress>
+                        <progress class="progress progress-accent w-56" th:value="${challengeMember.totalPostCount}" th:max="${challengeMember.linkedChallenge.challengeFrequency * challengeMember.linkedChallenge.challengePeriod}"></progress>
                         <div class="card-actions flex justify-around">
                             <div style="font-size: x-small">
-                                <a href="">
-                                    <span>댓글</span> <span>5</span>
-                                </a>
-                            </div>
-                            <div style="font-size: x-small">
-                                <a href="">
-                                    <span>클립</span><span>3</span>
+                                <a href="#">
+                                    <span>진행 상황 : </span>
+                                    <span th:text="${challengeMember.totalPostCount} + ' / '"></span>
+                                    <span th:text="${challengeMember.linkedChallenge.challengeFrequency * challengeMember.linkedChallenge.challengePeriod}"></span>
                                 </a>
                             </div>
                         </div>
@@ -111,14 +110,13 @@
         <article class="p-5 mx-5">
             <div class="p-2">
                 <h1 class="text-black text-2xl font-bold">>모집 중인 챌린지
-                    <span  th:if="${param.subject != null && !param.subject.isEmpty()}">
+                    <span th:if="${param.subject != null && !param.subject.isEmpty()}">
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'test')}">시험 대비</span>
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'project')}">프로젝트</span>
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'study')}">개념 공부</span>
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'coding')}">코딩 테스트</span>
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'algorithm')}">알고리즘</span>
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'solving')}">예제 풀기</span>
-
                     </span>
                     <span class="badge badge-accent mx-1" th:if="${param.language != null && !param.language.isEmpty()}"
                           th:text="${param.language}"></span>
@@ -139,27 +137,23 @@
                                     </figure>
                                 </a>
 
-
-                                <div class="card-body items-center text-center" style="padding: 10px">
+                                <div class="card-body items-center text-center" style="padding: 20px">
                                     <a th:href="|/usr/challenge/detail/${challenge.id}|">
-                                        <h4 class="text-black font-bold text-sm" th:text="${challenge.challengeName}">
-                                        프로그래머스 코테 준비
-                                        </h4>
+                                        <h4 class="text-black font-bold text-sm" th:text="${#strings.length(challenge.challengeName) &gt; 10
+                                        ? #strings.substring(challenge.challengeName, 0, 10) + '...' : challenge.challengeName}"></h4>
                                     </a>
-                                    <div class="flex flex-wrap">
-                                        <span class="badge badge-primary mx-1" style="font-size: x-small">매일</span>
-                                        <span class="badge badge-secondary mx-1" style="font-size: x-small">코딩테스트</span>
+                                    <div class="flex flex-wrap justify-center items-center">
+                                        <span class="badge badge-primary mx-2" style="font-size: x-small" th:text="'주 '+${challenge.challengeFrequency}+'회'"></span>
+                                        <span class="badge badge-secondary mx-2" style="font-size: x-small" th:text="${challenge.challengeLanguage}"></span>
+                                        <span class="badge badge-warning mx-2 my-1" style="font-size: x-small" th:text="${challenge.challengeSubject}"></span>
                                     </div>
-                                    <progress class="progress progress-accent w-56" value="40" max="100"></progress>
+                                    <progress class="progress progress-warning w-56" th:value="${countList.get(challenge.getId())}" th:max="${challenge.challengeMemberLimit}"></progress>
                                     <div class="card-actions flex justify-around">
                                         <div style="font-size: x-small">
-                                            <a href="">
-                                                <span>댓글</span> <span>5</span>
-                                            </a>
-                                        </div>
-                                        <div style="font-size: x-small">
-                                            <a href="">
-                                                <span>클립</span> <span>3</span>
+                                            <a href="#">
+                                                <span>현재 참여자 수 : </span>
+                                                <span th:text="${countList.get(challenge)} + ' / '">?? / </span>
+                                                <span th:text="${challenge.challengeMemberLimit}"></span>
                                             </a>
                                         </div>
                                     </div>
