--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -11,7 +11,8 @@
 
     <!-- FIXME 챌린지별 사진으로 변경?-->
     <div class="flex flex-1 justify-center items-center">
-        <form method="post" th:action="@{/usr/challenge/create}" enctype="multipart/form-data" class="flex flex-col justify-center items-center w-full">
+        <form method="post" th:action="@{/usr/challenge/create}" onsubmit="LikeForm__submit(this); return false;"
+              enctype="multipart/form-data" class="flex flex-col justify-center items-center w-full">
             <div class="card bg-white">
                 <div class="w-full p-10 lg:w-[65rem]">
                     <p class="text-[25px] bolder">챌린지 생성</p>
@@ -22,7 +23,9 @@
                                     <label for="title" class="label">
                                         <span class="text-gray-400">챌린지 제목</span>
                                     </label>
-                                    <input type="text" name="title" maxlength="15" placeholder="챌린지명" class="input input-bordered w-full form-control text-black" id="title" autofocus />
+                                    <input type="text" name="title" maxlength="30" placeholder="챌린지명"
+                                           class="input input-bordered w-full form-control text-black" id="title"
+                                           autofocus/>
                                 </div>
                             </div>
 
@@ -57,8 +60,10 @@
                                         <!-- 공개여부 UI 재설정 필요-->
                                         <span class="">공개 여부</span>
                                     </label>
-                                    <input type="radio" name="status" id="public" value=true class="radio radio-accent" checked>공개
-                                    <input type="radio" name="status" id="private" value=false class="radio radio-accent">비공개
+                                    <input type="radio" name="status" id="public" value=true class="radio radio-accent"
+                                           checked>공개
+                                    <input type="radio" name="status" id="private" value=false
+                                           class="radio radio-accent">비공개
                                 </div>
                             </div>
 
@@ -68,9 +73,11 @@
                                         <!-- 인증 주기 UI 재설정 필요-->
                                         <span class="text-gray-400">챌린지 주기를 선택해 주세요</span>
                                     </label>
-                                    <input type="radio" name="frequency" value="day1" class="radio radio-accent" checked>주 1회
+                                    <input type="radio" name="frequency" value="day1" class="radio radio-accent"
+                                           checked>주 1회
                                     <input type="radio" name="frequency" value="day3" class="radio radio-accent">주 3회
-                                    <input type="radio" name="frequency" value="day7" class="radio radio-accent">매일(주 7회)
+                                    <input type="radio" name="frequency" value="day7" class="radio radio-accent">매일(주
+                                    7회)
                                 </div>
                             </div>
                         </div>
@@ -80,7 +87,9 @@
                                     <label for="contents" class="label">
                                         <span class="text-gray-400">챌린지 내용</span>
                                     </label>
-                                    <textarea rows="7" name="contents" placeholder="챌린지내용" class="textarea textarea-accent w-96 form-control text-black" id="contents"></textarea>
+                                    <textarea rows="7" name="contents" placeholder="챌린지내용"
+                                              class="textarea textarea-accent w-96 form-control text-black"
+                                              id="contents"></textarea>
                                 </div>
                             </div>
 
@@ -129,7 +138,8 @@
                                     <label for="img" class="label">
                                         <span class="text-gray-400">챌린지 대표 이미지</span>
                                     </label>
-                                    <input id="img" name="file" type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" />
+                                    <input id="img" name="file" type="file"
+                                           class="file-input file-input-bordered file-input-accent w-full max-w-xs"/>
                                 </div>
                             </div>
 
